[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Dixing Xu <dixingxu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
networkx = "^3.3"
fastapi = "^0.115.0"
httpx = "^0.27.2"
matplotlib = "^3.9.2"
bokeh = "^3.6.0"
ipython = "^8.27.0"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
